@@ -11,5 +11,5 @@ signature WIN32_PROCESS =
 	val system' : string -> Win32_General.word
 	val exitProcess : Win32_General.word -> 'a
 	val getEnvironmentVariable' : string -> string option
+	val sleep : Time.time -> unit
     end
-
